[package]
name = "vaultrs"
version = "0.1.0"
authors = ["Juan Vidal <juan.vidal@daliaresearch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
tokio = { version = "0.2.21", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.3.9"

