[package]
name = "vaultrs"
version = "0.1.0"
authors = ["Juan Vidal <juan.vidal@daliaresearch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
tokio = { version = "0.2.21", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.3.9"
pretty_env_logger = "0.4.0"
log = "0.4.8"
futures = "0.3.5"
hashicorp_vault = "1.0.0"
base64 = "0.12.3"
